# clspv

./: .gitignore  BUILD.gn  deps.json
build_overrides/: clspv.gni  llvm.gni
gn/: BUILDCONFIG.gn  triples.gni
gn/llvm/: compiled_action.gni  tablegen.gni  write_cmake_config.gni  write_vcsrevision.gni
gn/llvm/config/: BUILD.gn
gn/llvm/config/clang/: BUILD.gn
gn/llvm/sources/: BUILD.gn
gn/llvm/tablegen/: BUILD.gn  clang_tablegen.gni  tablegen.gni
gn/llvm/tools/: BUILD.gn
gn/toolchain/: BUILD.gn  compiler.gni  target_flags.gni
lib/: BUILD.gn
tools/clspv-opt/: BUILD.gn
tools/driver/: BUILD.gn
tools/reflection/: BUILD.gn
utils/gn/: .gn  BUILD.gn  BUILDCONFIG.gn  symlink.gni
utils/gn/build_overrides/: build.gni  clspv.gni  llvm.gni  spirv_tools.gni
utils/gn/lib/: BUILD.gn
utils/gn/scripts/: symlink_or_copydir.py
utils/gn/toolchain/: BUILD.gn
utils/gn/tools/clspv-opt/: BUILD.gn
utils/gn/tools/driver/: BUILD.gn
utils/gn/tools/reflection/: BUILD.gn
