llvm_root = "third_party/llvm/"
llvm_build_root = "third_party/llvm/llvm/utils/gn/"

llvm_third_party_build = false

# Configs to be appended and removed based on top level build
llvm_code_override_configs_remove = [ "" ]
llvm_code_override_configs_append = [ "" ]

llvm_tblgen_output_dir_suffix = "/bin"
