import("//build_overrides/llvm.gni")

# clspv-opt executable target

config("clspv_opt_config") {
  # include deps
  include_dirs = [
    "../../include",
    "//{llvm_root}llvm/tools/opt",
  ]

  configs = [ "//${llvm_build_root}build:llvm_code" ]
}

executable("clspv-opt") {
  sources = [ "main.cpp" ]

  configs += [ ":clspv_opt_config" ]

  deps = [ "../../lib:clspv_passes" ]
}
