import("//build_overrides/clspv.gni")
import("//build_overrides/llvm.gni")

# clspv-opt executable target

config("clspv_opt_config") {
  # include deps
  include_dirs = [
    "../../include",
    "//{llvm_root}llvm/tools/opt",
  ]

  configs = [ "//${llvm_build_root}build:llvm_code" ]
}

executable("clspv-opt") {
  sources = [ "main.cpp" ]

  configs += [ ":clspv_opt_config" ]
  configs += clspv_configs_overrides_append
  configs -= clspv_configs_overrides_remove

  deps = [ "../../lib:clspv_passes" ]
}
