import("//build_overrides/clspv.gni")
import("//build_overrides/llvm.gni")

config("clspv_driver_config") {
  configs = [ "../../lib:clspv_common_config" ]
}

executable("clspv") {
  sources = [ "main.cpp" ]

  configs += [ ":clspv_driver_config" ]
  configs += clspv_configs_overrides_append
  configs -= clspv_configs_overrides_remove

  include_dirs = [ "$root_gen_dir/lib/" ]

  deps = [ "../../lib:clspv_core" ]
}
