import("//build_overrides/llvm.gni")

config("clspv_reflection_config") {
  # include deps
  include_dirs = [ "//third_party/SPIRV-Tools/include" ]

  configs = [ "../../lib:clspv_common_config" ]
}

executable("clspv-reflection") {
  sources = [
    "ReflectionParser.cpp",
    "main.cpp",
  ]

  configs += [ ":clspv_reflection_config" ]

  include_dirs = [ "$root_gen_dir" ]

  deps = [
    "../../:clspv_reflection",
    "../../lib:clspv_core",
    "//third_party/SPIRV-Tools:spvtools_link",
  ]
}
