import("//build_overrides/llvm.gni")
import("//build_overrides/spirv_tools.gni")

config("clspv_reflection_config") {
  # include deps
  include_dirs = [ "${spirv_tools_spirv_headers_dir}/include" ]

  configs = [ "../../lib:clspv_common_config" ]
}

executable("clspv-reflection") {
  sources = [
    "ReflectionParser.cpp",
    "main.cpp",
  ]

  configs += [ ":clspv_reflection_config" ]

  include_dirs = [ "$root_gen_dir" ]

  deps = [
    "${spirv_tools_dir}:spvtools_link",
    "../../:clspv_reflection",
    "../../lib:clspv_core",
  ]
}
